2005-04-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_lang_table_parse_start_tag),
	(totem_lang_get_full): also support iso-639-2 language names
	for the main benefit of Matroska (Closes: #301102)

2005-04-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_realize),
	(totem_playlist_map), (totem_playlist_unmap), (totem_playlist_new),
	(totem_playlist_class_init): add an map method and move the dialog
	where it was when we closed it (Closes: #300464)

2005-04-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (init_columns), (init_treeview):
	Remove the treeview header as it's not useful (Closes: #300463)

2005-04-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_string):
	  s/CDDB discid/Musicbrainz discid/.

2005-04-28  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-message-connection.c: (server_cb),
	(bacon_message_connection_send):
	* src/totem-options.c: (totem_print_playing_cb),
	(totem_options_process_for_server):
	* src/totem-remote.h:
	* src/totem.c: (totem_action_remote): Send back the title of the
	currently playing track with "--print-playing"

2005-04-27  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_get_mrls),
	(bacon_video_widget_get_current_frame): use g_malloc when g_free is
	used, fix compilation after API changed below

2005-04-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/backend/bacon-video-widget-gst.c:
	(bacon_video_widget_get_mrls):
	  Implement per-track CDDA playback (#171600).
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_get_mrls):
	* src/backend/bacon-video-widget.h:
	* src/totem.c: (totem_action_load_media):
	  Change API slightly for above;

2005-04-27  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (totem_remove_deleted_recent),