@@ -20,6 +20,7 @@ src/totem-options.c
 src/totem-playlist.c
 src/totem-preferences.c
 src/totem-properties-main.c
+src/totem-properties-view.c
 src/totem-screenshot.c
 src/totem-skipto.c
 src/totem-statusbar.c
