@@ -1,3 +1,7 @@
+2005-04-30  Bastien Nocera  <hadess@hadess.net>
+
+	* POTFILES.in: added src/totem-properties-view.c
+
 2005-04-25  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* wa.po: Updated Walloon file
